--- a/src/components/section1.scss
+++ b/src/components/section1.scss
@@ -76,20 +76,19 @@ $YCenter: translateY(-50%);
       }
     }
 
-    ul {
-      width: 70%;
+    .menu {
+      width: 80%;
       position: absolute;
       bottom: -50px;
       left: 50%;
       transform: $XCenter;
-      width: 70%;
       display: flex;
       justify-content: center;
-      gap: 10px;
+      gap: 20px;
       z-index: 9;
       li a {
-        width: 260px;
-        height: 100px;
+        width: 310px;
+        height: 110px;
         color: #fff;
         background-color: $color-beige;
         display: flex;
@@ -104,9 +103,9 @@ $YCenter: translateY(-50%);
         }
 
         h3 {
-          font-size: 1.2em;
+          font-size: 1.3em;
           line-height: 1.5;
-          margin-left: 10px;
+          margin: 10px;
           span {
             display: block;
             font-size: 0.7em;
